<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_anything_wrapper</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="128245752+paulfersi@users.noreply.github.com">sonia</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>torch</build_depend>
  <build_depend>torchvision</build_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
